turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:10: error: ')' expected but ';' found.
  else(droite();avance();)
               ^LangtonsAnt:10: error: illegal start of statement
  else(droite();avance();)
                         ^